# social-media-analytics

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  railway.toml  render.yaml  tailwind.config.js
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  models.py  signals.py  totp.py  urls.py  views.py
apps/analytics/: admin.py  apps.py  models.py  notifications.py  signals.py  tasks.py  urls.py  views.py
apps/api/: admin.py  apps.py  models.py  urls.py  views.py
apps/collectors/: __init__.py  admin.py  apps.py  models.py  tasks.py
apps/core/: admin.py  fields.py  models.py  ratelimit.py
apps/dashboard/: models.py  urls.py  views.py
apps/reports/: admin.py  models.py  urls.py  views.py
apps/social/: admin.py  apps.py  models.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  urls.py  views_i18n.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: API.md  ARCHITECTURE.md  AUDIT_LIVE.md  AUDIT_RESULTS.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  DIPLOMA_DEFENSE.md  OAUTH_SETUP.md  ONBOARDING.md  POLISH_SCAN.md  PUSH_INSTRUCTIONS.md  RESPONSIVE_AUDIT.md  TELEGRAM_SETUP.md  USER_GUIDE.md
locale/: missing_strings.json  strings.json
requirements/: base.txt  dev.txt  prod.txt
scripts/: audit_live.py  audit_live_auth.py  audit_urls.py  entrypoint.sh
static/: manifest.json  sw.js
static/css/: input.css
static/js/: app.js
templates/: 404.html  500.html  base.html
templates/account/: base.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/dashboard/: _shell.html  account_connect.html  accounts.html  activity_log.html  ai_digest.html  alerts.html  analytics.html  app.html  best_time.html  chat.html  clusters.html  compare.html  competitors.html  correlation.html  delete_account.html  hashtags.html  help.html  home.html  landing.html  post_generator.html  predict.html  privacy.html  public_share.html  reports.html  sentiment.html  settings.html  telegram_channels.html  telegram_code.html  telegram_password.html  telegram_phone.html  terms.html  top_posts.html  two_factor.html
templates/emails/: weekly_digest.html  weekly_digest.txt
templates/partials/: _command_palette.html  _empty.html  _footer.html  (+5 more)
tests/: test_smoke.py
tools/: i18n_compile.py  i18n_extract.py
(+62 files in other folders)
