[project]
name = "social-analytics"
version = "0.1.0"
description = "Social media analytics platform — diploma thesis project"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "migrations",
    "staticfiles",
    "media",
    ".venv",
    "locale",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length — black handles
    "S101",   # assert used (tests need asserts)
    "RUF012", # mutable class attrs — Django models use them
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S101", "S106"]
"**/test_*.py" = ["S101", "S106"]
"**/settings/*.py" = ["S105", "F403", "F405"]
"**/migrations/*.py" = ["E501", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
(
  /migrations/
  | /staticfiles/
  | /media/
  | /locale/
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
testpaths = ["apps", "tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests that hit external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/apps.py",
    "*/admin.py",
    "manage.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
precision = 1
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["migrations", ".venv", "staticfiles"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"
